Wed Apr  9 11:41:57 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2980_Regression_Test.cpp:
          Check for ACE_VXWORKS

Wed Apr  9 11:11:57 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Svc_Conf_y.cpp:
          Fixed unicode build problems

Wed Apr  9 08:06:57 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Svc_Conf.y:
        * ace/Svc_Conf_y.cpp:
          Fixed unicode build problems

Wed Apr  9 07:18:57 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h:
          Export ACE_Threading_Helper, it is used as protected class
          member

        * ace/Service_Gestalt.cpp:
          Don't use ACE_LIB_TEXT

        * ace/High_Res_Timer.h:
        * ace/Based_Pointer_T.h:
          Doxygen changes

        * ace/Naming_Context.cpp:
          Fixed gcc 4.3 warning

        * ace/OS_NS_errno.h (last_error):
          Give the argument a name so that doxygen can do its work

        * ace/Select_Reactor_T.cpp:
          Use scoping

        * ace/MMAP_Memory_Pool.{h,cpp}:
          Add a bool flag to indicate whether the signal handler has to
          be installed or not. Made some other flags bool and win32 there
          is no need have a signal handler as member. This fixes bugzilla
          3290

Wed Apr  9 02:43:37 UTC 2008  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Dynamic_Service.inl (instance):
          Adjusting interface to take a smart pointer.

        * ace/OS_NS_unistd.cpp (argv_to_string):
          Adding interpretation for tabs and new line characters as
          characters to trigger quoting.

        * ace/Service_Config.h:
        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.h:
        * ace/Service_Gestalt.inl:
        * ace/Service_Gestalt.cpp:
        * ace/Service_Repository.cpp:
          Reformatting, updating comments and logging.

Wed Apr  9 01:21:42 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
