@@ -1,3 +1,14 @@
+Wed Apr  9 11:50:27 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
+
+        * bin/MakeProjectCreator/modules/VXTestProjectCreator.pm:
+
+          Added a need_to_write_project override method to only allow the
+          project file to be written if it is an executable project.
+
+        * bin/MakeProjectCreator/modules/VXTestWorkspaceCreator.pm:
+
+          Fixed a bug where an invalid base module was used in the @ISA.
+
 Wed Apr  9 11:41:57 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_2980_Regression_Test.cpp:
